--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="AI landing page builder that creates stunning designs in seconds. No design skills needed. Export to HTML & Figma. Trusted by 65,000+ users worldwide."
     />
-    <title>Aura | AI Website Builder – No Code, No Design Skills</title>
+    <title>DEVLOPER ADITYA | dev.aditya</title>
 
     <!-- Open Graph (fallback for prerender/bots) -->
     <meta property="og:type" content="website" />
