--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ animation: pulse-glow 8s ease-in-out infinite;
     <nav class="relative z-50 w-full max-w-[1400px] mx-auto px-6 py-8 flex items-center justify-between">
         <!-- Logo -->
         <div class="flex items-center">
-            <span class="text-2xl font-bold tracking-tight text-white">Nexara</span>
+            <span class="text-2xl font-bold tracking-tight text-white">DEV ADITYA</span>
         </div>
 
         <!-- Desktop Menu -->
@@ -72,7 +72,7 @@ animation: pulse-glow 8s ease-in-out infinite;
             <!-- Headline -->
             <div>
                 <h1 class="text-[15vw] lg:text-[160px] font-bold tracking-tighter leading-[0.8] text-white drop-shadow-2xl">
-                    Nexara
+                    WEBSITE DEVLOPER
                 </h1>
             </div>
 
