--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ animation: pulse-glow 8s ease-in-out infinite;
                    <!-- <div class="absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#020005] to-transparent z-20"></div> -->
                    
                    <!-- The House Image -->
-                   <!-- <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&amp;w=1200&amp;auto=format&amp;fit=crop" alt="3D House Render" class="w-full h-full object-cover object-center rounded-xl shadow-2xl brightness-90 contrast-125" style="mask-image: linear-gradient(to bottom, black 80%, transparent 100%); -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);"> -->
+                   <img src="coading.png" alt="Image" class="w-full h-full object-cover object-center rounded-xl shadow-2xl brightness-90 contrast-125" style="mask-image: linear-gradient(to bottom, black 80%, transparent 100%); -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);">
 
                    <!-- Purple Tint Overlay to match the theme color "blue or black/purple" -->
                    <!-- <div class="absolute inset-0 bg-violet-900/10 mix-blend-overlay pointer-events-none rounded-xl"></div>
