--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@ animation: pulse-glow 8s ease-in-out infinite;
         </div>
 
         <!-- Right Column: 3D PHOTO1 -->
-        <!-- <div class="w-full lg:w-1/2 relative mt-16 lg:mt-0"> -->
+        <div class="w-full lg:w-1/2 relative mt-16 lg:mt-0">
             
             <!-- Background Glow behind visual -->
-            <!-- <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[120%] h-[120%] bg-violet-900/20 blur-[80px] rounded-full pointer-events-none"></div> -->
+            <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[120%] h-[120%] bg-violet-900/20 blur-[80px] rounded-full pointer-events-none"></div>
 
             <!-- ADITYA DEV PHOTO1 Container -->
-            <div class="relative w-full aspect-square md:aspect-[4/3] group">
+            <!-- <div class="relative w-full aspect-square md:aspect-[4/3] group"> -->
                 
                 <!-- Main Image Masked to look like a floating object -->
                 <!-- Using a specific architectural image to mimic the "Photo1" look -->
