--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@ animation: pulse-glow 8s ease-in-out infinite;
                    <img src="photo1.png" alt="Image" class="w-full h-full object-cover object-center rounded-xl shadow-2xl brightness-90 contrast-125" style="mask-image: linear-gradient(to bottom, black 80%, transparent 100%); -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);">
 
                 <!-- Floating Element: Video Icon (Top Right) -->
-                <div class="absolute top-8 right-[-10px] md:right-8 z-30 animate-[bounce_3s_infinite]">
+                <!-- <div class="absolute top-8 right-[-10px] md:right-8 z-30 animate-[bounce_3s_infinite]">
                     <div class="w-14 h-14 rounded-2xl bg-white/5 backdrop-blur-xl border border-white/10 shadow-lg flex items-center justify-center">
                         <i data-lucide="video" class="w-6 h-6 text-violet-300 fill-violet-300/20"></i>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Floating Element: Play Button (Bottom Left) -->
-                <div class="absolute bottom-12 -left-4 md:left-8 z-30">
+                <!-- <div class="absolute bottom-12 -left-4 md:left-8 z-30">
                     <div class="w-16 h-16 rounded-2xl bg-white/5 backdrop-blur-xl border border-white/10 shadow-lg flex items-center justify-center group cursor-pointer hover:bg-white/10 transition-colors">
                         <div class="w-8 h-8 rounded-full bg-violet-600 flex items-center justify-center shadow-[0_0_15px_rgba(124,58,237,0.5)]">
                             <i data-lucide="play" class="w-3 h-3 text-white fill-white ml-0.5"></i>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
             </div>
         </div>
