--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en"><head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DEVLOPER ADITYA | aditya.dev</title>
+<title>DEVELOPER ADITYA | aditya.dev</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
 <style>
@@ -72,7 +72,7 @@ animation: pulse-glow 8s ease-in-out infinite;
             <!-- Headline -->
             <div>
                 <h1 class="text-[15vw] lg:text-[160px] font-bold tracking-tighter leading-[0.8] text-white drop-shadow-2xl">
-                    WEBSITE DEVLOPER
+                    WEBSITE DEVELOPER
                 </h1>
             </div>
 
