--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body{font-family:'Inter',sans-serif}
 </nav>
 
 <!-- 🔹 Hero -->
-<main class="max-w-[1400px] mx-auto px-6 min-h-[85vh] flex flex-col lg:flex-row items-center">
+<main class="max-w-[1400px] mx-auto px-6 min-h-[85vh] flex flex-col lg:flex-row items-center gap-16">
   
   <div class="lg:w-1/2 space-y-10">
     <h2 class="text-[15vw] lg:text-[160px] font-bold leading-[0.8]">
@@ -58,9 +58,15 @@ body{font-family:'Inter',sans-serif}
     </p>
   </div>
 
-  <img src="photo1.png" alt="Developer Aditya"
-  class="lg:w-1/2 rounded-xl shadow-2xl brightness-90"
-  style="mask-image:linear-gradient(black 80%,transparent)">
+  <div class="w-full lg:w-1/2 flex justify-center lg:justify-end">
+    <img 
+      src="photo1.png"
+      alt="Developer Aditya"
+      class="w-full max-w-[520px] rounded-xl shadow-2xl brightness-95"
+      style="mask-image:linear-gradient(black 80%,transparent);
+             -webkit-mask-image:linear-gradient(black 80%,transparent);">
+  </div>
+
 </main>
 
 <!-- 🔹 Footer (Glass) -->
