--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@ body{font-family:'Inter',sans-serif}
     <img 
       src="photo1.png"
       alt="Developer Aditya"
-      class="w-full max-w-[520px] rounded-xl shadow-2xl brightness-95"
-      style="mask-image:linear-gradient(black 80%,transparent);
-             -webkit-mask-image:linear-gradient(black 80%,transparent);">
+      class="w-full h-full object-cover object-center rounded-xl shadow-2xl brightness-90 contrast-125"
+      style="mask-image: linear-gradient(to bottom, black 80%, transparent 100%); -webkit-mask-image: linear-gradient(to bottom, black 80%, transparent 100%);">
   </div>
 
 </main>
