--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body{font-family:'Inter',sans-serif}
     </p>
   </div>
 
-  <div class="w-full lg:w-1/2 flex justify-center lg:justify-end">
+  <!-- <div class="w-full lg:w-1/2 flex justify-center lg:justify-end"> -->
     <img 
       src="photo1.png"
       alt="Developer Aditya"
