--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body{font-family:'Inter',sans-serif}
       <div class="text-sm space-y-2">
         <p class="uppercase tracking-widest text-white">Navigation</p>
         <a class="block text-gray-400 hover:text-white">Home</a>
-        <a class="block text-gray-400 hover:text-white">Services</a>
+        <a href="services" class="block text-gray-400 hover:text-white">Services</a>
         <a class="block text-gray-400 hover:text-white">Projects</a>
         <a class="block text-gray-400 hover:text-white">Contact</a>
       </div>
