--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body{font-family:'Inter',sans-serif}
   <h1 class="text-2xl font-bold">DEV ADITYA</h1>
   <div class="hidden md:flex gap-8 text-xs tracking-widest uppercase">
     <a class="text-white">Home</a>
-    <a class="text-gray-400 hover:text-white">Services</a>
+    <a href="services"class="text-gray-400 hover:text-white">Services</a>
     <a class="text-gray-400 hover:text-white">Projects</a>
     <a class="text-gray-400 hover:text-white">Contact</a>
   </div>
