--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body{font-family:'Inter',sans-serif}
     <a class="text-white">Home</a>
     <a href="services"class="text-gray-400 hover:text-white">Services</a>
     <a class="text-gray-400 hover:text-white">Projects</a>
-    <a class="text-gray-400 hover:text-white">Contact</a>
+    <a href="contact.html" class="text-gray-400 hover:text-white">Contact</a>
   </div>
 </nav>
 
@@ -85,7 +85,7 @@ body{font-family:'Inter',sans-serif}
         <a class="block text-gray-400 hover:text-white">Home</a>
         <a href="services.html" class="block text-gray-400 hover:text-white">Services</a>
         <a class="block text-gray-400 hover:text-white">Projects</a>
-        <a class="block text-gray-400 hover:text-white">Contact</a>
+        <a href="contact.html"class="block text-gray-400 hover:text-white">Contact</a>
       </div>
 
       <div class="text-sm space-y-2">
