--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@ html{scroll-behavior:smooth}
     <a href="index.html" class="text-gray-400 hover:text-white">Home</a>
     <a class="text-white">Services</a>
     <a href="#" class="text-gray-400 hover:text-white">Projects</a>
-    <a href="#" class="text-gray-400 hover:text-white">Contact</a>
+    <a href="contact.html" class="text-gray-400 hover:text-white">Contact</a>
   </div>
 </nav>
 
