--- a/services.html
+++ b/services.html
@@ -113,7 +113,7 @@ html{scroll-behavior:smooth}
   <p class="text-gray-400 mt-4">
     Ready to start your project? Let’s work together.
   </p>
-  <a href="#" class="inline-block mt-8 px-8 py-4 rounded-full bg-violet-600 hover:bg-violet-700 transition-all">
+  <a href="contact.html" class="inline-block mt-8 px-8 py-4 rounded-full bg-violet-600 hover:bg-violet-700 transition-all">
     Contact Me
   </a>
 </section>
