--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body{font-family:'Inter',sans-serif}
 
       <div class="text-sm space-y-2">
         <p class="uppercase tracking-widest text-white">Contact</p>
-        <p>Email: aditya@email.com</p>
+        <p>Email: contact.mail.raj@gmail.com</p>
         <div class="flex gap-3 pt-2">
           <i data-lucide="github"></i>
           <i data-lucide="linkedin"></i>
