--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@ html{scroll-behavior:smooth}
         <div class="w-12 h-12 rounded-full bg-white/10 flex items-center justify-center">
           <i data-lucide="mail" class="text-violet-400"></i>
         </div>
-        <span>aditya@email.com</span>
+        <span>contact.mail.raj@gmail.com</span>
       </div>
 
       <div class="flex items-center gap-4">
