--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@ html{scroll-behavior:smooth}
         <div class="w-12 h-12 rounded-full bg-white/10 flex items-center justify-center">
           <i data-lucide="phone" class="text-violet-400"></i>
         </div>
-        <span>+91 XXXXX XXXXX</span>
+        <span>+91 87265 85893 (Only For Whatsapp SMS)</span>
       </div>
 
       <div class="flex items-center gap-4">
