--- a/contact.html
+++ b/contact.html
@@ -93,9 +93,15 @@ html{scroll-behavior:smooth}
       <a class="w-11 h-11 rounded-full bg-white/10 border border-white/10 flex items-center justify-center hover:bg-violet-500/20 transition-all">
         <i data-lucide="linkedin"></i>
       </a>
-      <a class="w-11 h-11 rounded-full bg-white/10 border border-white/10 flex items-center justify-center hover:bg-violet-500/20 transition-all">
+      <a 
+        href="https://www.instagram.com/dev.aditya__?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" 
+        target="_blank" 
+        rel="noopener noreferrer"
+        class="w-11 h-11 rounded-full bg-white/10 border border-white/10 flex items-center justify-center hover:bg-violet-500/20 transition-all">
+        
         <i data-lucide="instagram"></i>
       </a>
+
     </div>
   </div>
 
